--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -2593,6 +2593,24 @@ a:hover, a:focus {
 	color: #ffffff;
 	padding: 8px;
 }
+.btn-personal-message-post {
+	height:30px;
+	background-color: #666634;
+	border-bottom-right-radius:4px;
+	border-top-right-radius:4px;
+	color: #ffffff;
+	padding: 5px;
+	border:none;
+}
+.btn-personal-message-post:hover, .btn-personal-message-post:focus {
+	background-color: #4d4d28;
+	border-bottom-right-radius:4px;
+	border-top-right-radius:4px;
+	color: #ffffff;
+	padding: 5px;
+	height:30px;
+	border:none;
+}
 .text-white {
 	color: #FFF;
 }
@@ -2678,7 +2696,7 @@ a:hover, a:focus {
 .padding-box {
 	padding-bottom: 10px;
 	padding-top: 10px;
-	border-bottom: 1px dotted #ccc;
+	border-top: 1px dotted #ccc;
 }
 .padding-chat {
 	padding-bottom: 5px;
@@ -2705,7 +2723,7 @@ a:hover, a:focus {
 	padding-top: 15px;
 }
 .form-control {
-	min-width: 250px;
+	min-width: 240px;
 }
 .feed-image {
 	height: 40px;
